// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateFilter: Component should render correctly 1`] = `
<styled.div>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Create Filter"
        id="dataSource.view.filter.subTitle"
        values={Object {}}
      />
    }
    headerTitle="name"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "tagsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Tags"
            id="project.view.tags"
            values={Object {}}
          />,
          "to": "/project/1/tag-categories",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
            values={Object {}}
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
            values={Object {}}
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Create Filter"
        id="dataSource.view.filter.subTitle"
        values={Object {}}
      />
    }
    title="name"
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
</styled.div>
`;

exports[`CreateFilter: Component should render correctly with loader 1`] = `
<styled.div>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Create Filter"
        id="dataSource.view.filter.subTitle"
        values={Object {}}
      />
    }
    headerTitle="name"
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "tagsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Tags"
            id="project.view.tags"
            values={Object {}}
          />,
          "to": "/project/1/tag-categories",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
            values={Object {}}
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
            values={Object {}}
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Create Filter"
        id="dataSource.view.filter.subTitle"
        values={Object {}}
      />
    }
    title="name"
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <Component />
  </LoadingWrapper>
</styled.div>
`;
